fix(jisho): use flex to remove gap & fix rounded corners

--- a/styles/jisho/catppuccin.user.css
+++ b/styles/jisho/catppuccin.user.css
@@ -114,6 +114,19 @@
       }
     }
 
+    // ! There is some white space between the buttons in the button group
+    // ! This is somewhat mitigated by using `margin: 0 -2px;` originally
+    // ! We use `display: flex;` instead
+    .button-group {
+      display: flex;
+      flex-wrap: wrap;
+
+      &.radius > *,
+      > li {
+        margin: unset;
+      }
+    }
+
     .f-dropdown {
       background-color: @mantle;
       border-color: @overlay0;
